[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultbeat-mcp"
version = "0.1.2"
description = "Local MCP server for Vaultbeat — AI Health Sync: your AI agent reads your end-to-end-encrypted Apple Health data (sleep, cycle, weight, water), decrypted only on your machine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42.0.0,<47.0.0",
  "httpx>=0.28.0,<1.0.0",
  "keyring>=24",
  "mcp>=1.13.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.11.0,<1.0.0",
  "mypy>=1.13.0,<2.0.0",
]
qr = [
  "qrcode>=8.0.0,<9.0.0",
]

[project.scripts]
vaultbeat-mcp = "vaultbeat_mcp_local.cli:main"
# Back-compat alias: pre-rename installs and docs invoke vaultbeat-mcp-local.
vaultbeat-mcp-local = "vaultbeat_mcp_local.cli:main"

[tool.pytest.ini_options]
# src-layout: make vaultbeat_mcp_local importable for the test run without depending
# on an editable install being present. The editable .pth can silently drop out
# when the venv is rebuilt (e.g. via `uv sync`), which otherwise breaks collection.
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true

[tool.setuptools.packages.find]
where = ["src"]
